CMake: Regenerate qtdeclarative/tests
Includes:
 - new api calls
 - some new dependencies
 - some TARGET_DESCRIPTION
 - some additional tool directory exclusion when cross-compiling
   (qmlplugindump)
 - some missing add_subdirectory calls

Change-Id: Iea43e45b94f37367ffc1d8dd6ce0ff1021a31b1a
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/tests/auto/qml/CMakeLists.txt
+++ b/tests/auto/qml/CMakeLists.txt
@@ -1,5 +1,10 @@
 # Generated from qml.pro.
 
+
+qt_exclude_tool_directories_from_default_target(
+    qmlplugindump
+)
+
 add_subdirectory(parserstress)
 add_subdirectory(qjsvalueiterator)
 add_subdirectory(qjsonbinding)
@@ -89,4 +94,7 @@ if(QT_FEATURE_private_tests)
     add_subdirectory(ecmascripttests)
     add_subdirectory(bindingdependencyapi)
     add_subdirectory(v4misc)
+endif()
+if(NOT CMAKE_CROSSCOMPILING)
+    # add_subdirectory(qmltyperegistrar) # special case need to port
 endif()
