--- a/tests/auto/qml/ecmascripttests/CMakeLists.txt
+++ b/tests/auto/qml/ecmascripttests/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_ecmascripttests Test:
 #####################################################################
 
-add_qt_test(tst_ecmascripttests
+qt_add_test(tst_ecmascripttests
     SOURCES
         qjstest/test262runner.cpp qjstest/test262runner.h
         tst_ecmascripttests.cpp
