--- a/tests/auto/qml/ecmascripttests/qjstest/CMakeLists.txt
+++ b/tests/auto/qml/ecmascripttests/qjstest/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 qt_add_tool(qjstest
+    TARGET_DESCRIPTION "Javascript test runner"
     SOURCES
         main.cpp
         test262runner.cpp test262runner.h
