--- a/tests/auto/qml/qmlplugindump/CMakeLists.txt
+++ b/tests/auto/qml/qmlplugindump/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qmlplugindump Test:
 #####################################################################
 
-add_qt_test(tst_qmlplugindump
+qt_add_test(tst_qmlplugindump
     SOURCES
         ../../shared/util.cpp ../../shared/util.h
         tst_qmlplugindump.cpp
@@ -20,12 +20,12 @@ add_qt_test(tst_qmlplugindump
 ## Scopes:
 #####################################################################
 
-extend_target(tst_qmlplugindump CONDITION ANDROID OR IOS
+qt_extend_target(tst_qmlplugindump CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-extend_target(tst_qmlplugindump CONDITION NOT ANDROID AND NOT IOS
+qt_extend_target(tst_qmlplugindump CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
