--- a/tests/auto/qml/qqmlapplicationengine/CMakeLists.txt
+++ b/tests/auto/qml/qqmlapplicationengine/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-add_qt_test(tst_qqmlapplicationengine
+qt_add_test(tst_qqmlapplicationengine
     SOURCES
         ../../shared/util.cpp ../../shared/util.h
         tst_qqmlapplicationengine.cpp
@@ -30,7 +30,7 @@ set(tst_qqmlapplicationengine_resource_files
     "data/loadTranslation.qml"
 )
 
-add_qt_resource(tst_qqmlapplicationengine "tst_qqmlapplicationengine"
+qt_add_resource(tst_qqmlapplicationengine "tst_qqmlapplicationengine"
     PREFIX
         "/"
     FILES
@@ -44,12 +44,12 @@ add_qt_resource(tst_qqmlapplicationengine "tst_qqmlapplicationengine"
 ## Scopes:
 #####################################################################
 
-extend_target(tst_qqmlapplicationengine CONDITION ANDROID OR IOS
+qt_extend_target(tst_qqmlapplicationengine CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-extend_target(tst_qqmlapplicationengine CONDITION NOT ANDROID AND NOT IOS
+qt_extend_target(tst_qqmlapplicationengine CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
