--- a/tests/auto/quick/qquickcolorgroup/CMakeLists.txt
+++ b/tests/auto/quick/qquickcolorgroup/CMakeLists.txt
@@ -1,8 +1,18 @@
+# Generated from qquickcolorgroup.pro.
+
+#####################################################################
+## tst_qquickcolorgroup Test:
+#####################################################################
+
 qt_add_test(tst_qquickcolorgroup
     SOURCES
         tst_qquickcolorgroup.cpp
     PUBLIC_LIBRARIES
         Qt::CorePrivate
+        Qt::Gui
         Qt::QmlPrivate
         Qt::QuickPrivate
 )
+
+## Scopes:
+#####################################################################
