--- a/tests/auto/quick/qquickpalette/CMakeLists.txt
+++ b/tests/auto/quick/qquickpalette/CMakeLists.txt
@@ -1,8 +1,18 @@
+# Generated from qquickpalette.pro.
+
+#####################################################################
+## tst_qquickpalette Test:
+#####################################################################
+
 qt_add_test(tst_qquickpalette
     SOURCES
         tst_qquickpalette.cpp
     PUBLIC_LIBRARIES
         Qt::CorePrivate
+        Qt::Gui
         Qt::QmlPrivate
         Qt::QuickPrivate
 )
+
+## Scopes:
+#####################################################################
