Enable rendercontrol_d3d11 example in CMake builds
Change-Id: Ifd1526da4a792e783e47fc7bb952bdb188a6e5c1
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/quick/rendercontrol/CMakeLists.txt
+++ b/examples/quick/rendercontrol/CMakeLists.txt
@@ -2,5 +2,5 @@
 
 add_subdirectory(rendercontrol_opengl)
 if(WIN32 AND NOT MINGW)
-    # add_subdirectory(rendercontrol_d3d11) # special case to be ported
+    add_subdirectory(rendercontrol_d3d11)
 endif()
