Port shader effect autotest to RHI
The lookThroughShaderCode test function had to be removed, since
it does not make sense when the shader code may not be available.
Added testConnection() to verify that connections are made.

Fixes: QTBUG-84123
Change-Id: I33594367bea97de9ef0d54711b105a33c8a57fa8
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/tests/auto/quick/qquickshadereffect/CMakeLists.txt
+++ b/tests/auto/quick/qquickshadereffect/CMakeLists.txt
@@ -18,6 +18,30 @@ qt_add_test(tst_qquickshadereffect
         Qt::QuickPrivate
 )
 
+# Resources:
+set(resources_resource_files
+    "data/+qsb/red.frag"
+    "data/+qsb/test.frag"
+    "data/+qsb/test.vert"
+    "data/MyIcon.qml"
+    "data/connections.qml"
+    "data/deleteShaderEffectSource.qml"
+    "data/deleteSourceItem.qml"
+    "data/red.frag"
+    "data/star.png"
+    "data/test.frag"
+    "data/test.vert"
+    "data/twoImagesOneShaderEffect.qml"
+)
+
+qt_add_resource(tst_qquickshadereffect "resources"
+    PREFIX
+        "/"
+    FILES
+        ${resources_resource_files}
+)
+
+
 ## Scopes:
 #####################################################################
 
