--- a/src/imports/models/CMakeLists.txt
+++ b/src/imports/models/CMakeLists.txt
@@ -9,7 +9,7 @@ qt_add_qml_module(modelsplugin
     VERSION "${CMAKE_PROJECT_VERSION}"
     DESIGNER_SUPPORTED
     CLASSNAME QtQmlModelsPlugin
-    SKIP_TYPE_REGISTRATION
+    PLUGIN_OPTIONAL # special case
     SOURCES
         plugin.cpp
     PUBLIC_LIBRARIES
