cmake: add qqmldelegatemodel test
I'm not sure how that one is added in qmake, but now it's at least
available in cmake.

Task-number: QTBUG-84869
Change-Id: Icc0c02beef03bb858767f9f584f53169a3ab3ebb
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tests/auto/qml/CMakeLists.txt
+++ b/tests/auto/qml/CMakeLists.txt
@@ -94,6 +94,7 @@ if(QT_FEATURE_private_tests)
     add_subdirectory(ecmascripttests)
     add_subdirectory(bindingdependencyapi)
     add_subdirectory(v4misc)
+    add_subdirectory(qqmldelegatemodel) # special case
 endif()
 if(NOT CMAKE_CROSSCOMPILING)
     # add_subdirectory(qmltyperegistrar) # special case need to port
