cmake: Enable tests for pointerhandlers
Also add the missing cmake file for mousearea_interop

Task-number: QTBUG-84869
Change-Id: I7e48653c815aaaa3e23824783f6a0ff390c0907a
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tests/auto/quick/CMakeLists.txt
+++ b/tests/auto/quick/CMakeLists.txt
@@ -24,7 +24,7 @@ if(QT_FEATURE_private_tests)
     # add_subdirectory(qquickcolorgroup) # special case need to port
     # add_subdirectory(qquickpalette) # special case need to port
     add_subdirectory(qquicktimeline)
-    # add_subdirectory(pointerhandlers) # skip building until fixed in dev # special case
+    add_subdirectory(pointerhandlers)
     add_subdirectory(qquickaccessible)
     add_subdirectory(qquickanchors)
     add_subdirectory(qquickanimatedimage)
