--- a/tests/auto/quick/CMakeLists.txt
+++ b/tests/auto/quick/CMakeLists.txt
@@ -21,8 +21,6 @@ if(QT_FEATURE_private_tests)
     add_subdirectory(qquickstyledtext)
     add_subdirectory(qquickstates)
     add_subdirectory(qquicksystempalette)
-    # add_subdirectory(qquickcolorgroup) # special case need to port
-    # add_subdirectory(qquickpalette) # special case need to port
     add_subdirectory(qquicktimeline)
     add_subdirectory(pointerhandlers)
     add_subdirectory(qquickaccessible)
@@ -46,7 +44,7 @@ if(QT_FEATURE_private_tests)
     add_subdirectory(qquicktableview)
     add_subdirectory(qquickloader)
     add_subdirectory(qquickmousearea)
-    # add_subdirectory(qquickmultipointtoucharea) # skip building until fixed in dev # special case
+    add_subdirectory(qquickmultipointtoucharea)
     add_subdirectory(qquickpainteditem)
     add_subdirectory(qquickshape)
     add_subdirectory(qquickpathview)
@@ -64,7 +62,7 @@ if(QT_FEATURE_private_tests)
     add_subdirectory(qquickcanvasitem)
     add_subdirectory(qquickdesignersupport)
     add_subdirectory(qquickscreen)
-    # add_subdirectory(touchmouse) # skip building until fixed in dev # special case
+    add_subdirectory(touchmouse)
     add_subdirectory(scenegraph)
     add_subdirectory(sharedimage)
     add_subdirectory(qquickcolorgroup)
