Deduplicate the import resolution algorithm
We will need it in various other places, too.

Change-Id: I61c55f88b66ab85448ae8fff125fe34108532fc4
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -272,6 +272,7 @@ qt_add_module(Qml
         qml/v8/qv4domerrors.cpp qml/v8/qv4domerrors_p.h
         qml/v8/qv4sqlerrors.cpp qml/v8/qv4sqlerrors_p.h
         qmldirparser/qqmldirparser.cpp qmldirparser/qqmldirparser_p.h
+        qmldirparser/qqmlimportresolver.cpp qmldirparser/qqmlimportresolver_p.h
         qtqmlcompilerglobal.h qtqmlcompilerglobal_p.h
         qtqmlglobal.h qtqmlglobal_p.h
         types/qqmlbind.cpp types/qqmlbind_p.h
