CMake: Fix failing linux static build
Use workaround to fix failing static builds due to wrong ordering
of static libraries on the link line. This involves specifying
some of the libraries in an explicitly correct order.
See the bug report for more details.

Task-number: QTBUG-83498
Change-Id: I2238a049bd315845df8ad8995d47dfe7e351a2c5
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>

--- a/tools/qmleasing/CMakeLists.txt
+++ b/tools/qmleasing/CMakeLists.txt
@@ -15,6 +15,7 @@ qt_add_executable(qmleasing
         segmentproperties.cpp segmentproperties.h
         splineeditor.cpp splineeditor.h
     PUBLIC_LIBRARIES
+        Qt::OpenGL # special case QTBUG-83498
         Qt::Gui
         Qt::Qml
         Qt::Quick
