--- a/tools/qmltestrunner/CMakeLists.txt
+++ b/tools/qmltestrunner/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_add_tool(qmltestrunner
     SOURCES
         main.cpp
     PUBLIC_LIBRARIES
+        Qt::OpenGL # special case QTBUG-83498
         Qt::Gui
         Qt::Qml
         Qt::QuickTest
