Clean up QT_CONFIG(opengl)
Accelerated graphics is now possible without OpenGL support. With
this change, a Qt build with -no-opengl can still run Qt Quick with
a Vulkan, Metal, or Direct3D backend.

Fixes: QTBUG-84027
Change-Id: Ib63c733d28cfdf7de16b138df136fa7628e1747b
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/src/quick/configure.json
+++ b/src/quick/configure.json
@@ -107,7 +107,7 @@
             "label": "Particle support",
             "purpose": "Provides a particle system.",
             "section": "Qt Quick",
-            "condition": "module.gui && features.quick-shadereffect && features.quick-sprite && features.opengl",
+            "condition": "module.gui && features.quick-shadereffect && features.quick-sprite",
             "output": [
                 "privateFeature"
             ]
