--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -12,9 +12,9 @@ add_subdirectory(toolsupport)
 if(NOT UIKIT)
     add_subdirectory(qmltest)
 endif()
-if(TARGET Qt::Gui AND (QT_FEATURE_opengl OR QT_FEATURE_opengles2 OR QT_FEATURE_opengles3))
+if(TARGET Qt::Gui)
     add_subdirectory(particles)
 endif()
-if(TARGET Qt::Gui AND TARGET Qt::Widgets AND (QT_FEATURE_opengl OR QT_FEATURE_opengles2 OR QT_FEATURE_opengles3))
+if(TARGET Qt::Widgets)
     add_subdirectory(quickwidgets)
 endif()
