Discern between "auto" and versioned imports in qmldirs
You can now import the latest version, a specific version, or, "auto"
which is the same version as the parent module.

[ChangeLog][QtQml] You can now procedurally add module imports to
modules, using qmlRegisterModuleImport(). However, actual import
statements in qmldir files should be preferred wherever possible.

Fixes: QTBUG-84899
Change-Id: I3b32dd8b07a19d31b6538b9a6bb436840862f345
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/imports/qtqml/CMakeLists.txt
+++ b/src/imports/qtqml/CMakeLists.txt
@@ -1,12 +1,12 @@
 # Generated from qtqml.pro.
 
 set(module_dynamic_qml_imports
-    QtQml.Models
+    QtQml.Models/auto
 )
 
 if (QT_FEATURE_qml_worker_script)
     list(APPEND module_dynamic_qml_imports
-        QtQml.WorkerScript
+        QtQml.WorkerScript/auto
     )
 endif()
 
