CMake: Fix tst_qqmlmoduleplugin for MinGW
Some of the pro files didn't have the CONFIG += plugin line, which
resulted in pro2cmake generating shared libraries for the respective
plugins.

The shared libraries had the "lib" prefix on MinGW, which caused the
plugin loading mechanism to fail.

Task-number: QTBUG-84886
Change-Id: I240967d918db13be45cf9b79bfcc989e9b826937
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tests/auto/qml/qqmlmoduleplugin/nestedPlugin/CMakeLists.txt
+++ b/tests/auto/qml/qqmlmoduleplugin/nestedPlugin/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 qt_add_cmake_library(nestedPlugin
+    MODULE # special case
     OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../imports/org/qtproject/AutoTestQmlNestedPluginType"
     SOURCES
         nestedPlugin.cpp
