--- a/tests/auto/qml/qqmlmoduleplugin/plugin.2/childplugin/CMakeLists.txt
+++ b/tests/auto/qml/qqmlmoduleplugin/plugin.2/childplugin/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 qt_add_cmake_library(childplugin.2 # special case
+    MODULE # special case
     OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../imports/org/qtproject/AutoTestQmlPluginType.2/ChildPlugin"
     SOURCES
         childplugin.cpp
