--- a/tests/auto/qml/qqmlmoduleplugin/plugin/childplugin/CMakeLists.txt
+++ b/tests/auto/qml/qqmlmoduleplugin/plugin/childplugin/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 qt_add_cmake_library(childplugin
+    MODULE # special case
     OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../imports/org/qtproject/AutoTestQmlPluginType/ChildPlugin"
     SOURCES
         childplugin.cpp
