--- a/tools/qmlcachegen/Qt5QuickCompilerConfig.cmake.in
+++ b/tools/qmlcachegen/Qt5QuickCompilerConfig.cmake.in
@@ -63,7 +63,10 @@ but not all the files it references.
                 get_filename_component(extension ${it} EXT)
                 if(extension STREQUAL \".qml\" OR extension STREQUAL \".js\" OR extension STREQUAL \".ui.qml\" OR extension STREQUAL \".mjs\")
                     qtquick_compiler_determine_output_filename(output_file ${it})
-                    add_custom_command(OUTPUT ${output_file} COMMAND ${compiler_path} ARGS --resource=${input_resource} ${it} -o ${output_file} DEPENDS ${it})
+                    add_custom_command(OUTPUT ${output_file}
+                                       COMMAND ${compiler_path}
+                                       ARGS --resource=${input_resource} ${it} -o ${output_file}
+                                       DEPENDS ${it} ${input_resource})
                     list(APPEND compiler_output ${output_file})
                     set(rcc_file_with_compilation_units ${input_resource})
                 endif()
