Prepare Qt5QuickCompiler.cmake.in for Qt6
Increment all the version numbers. Replace
qtquick_compiler_add_resources with a warning and a call to
qt6_add_resources.

Task-number: QTBUG-85190
Change-Id: Ifed5449ab4d6312a57add870eee13175872146db
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tools/qmlcachegen/CMakeLists.txt
+++ b/tools/qmlcachegen/CMakeLists.txt
@@ -4,7 +4,8 @@
 ## qmlcachegen Tool:
 #####################################################################
 
-qt_add_tool(qmlcachegen
+qt_get_tool_target_name(target_name qmlcachegen)
+qt_add_tool(${target_name}
     TARGET_DESCRIPTION "QML Cache Generator"
     TOOLS_TARGET Qml # special case
     SOURCES
@@ -29,9 +30,9 @@ qt_add_tool(qmlcachegen
 # build_integration.files = "qmlcache.prf" "qtquickcompiler.prf"
 # build_integration.path = "$$[QT_HOST_DATA]/mkspecs/features"
 # cmake_build_integration.files = "$$cmake_config_file.output"
-# cmake_build_integration.path = "$$[QT_INSTALL_LIBS]/cmake/Qt5QuickCompiler"
-# cmake_config_file.input = "$$PWD/Qt5QuickCompilerConfig.cmake.in"
-# cmake_config_file.output = "$$MODULE_BASE_OUTDIR/lib/cmake/Qt5QuickCompiler/Qt5QuickCompilerConfig.cmake"
+# cmake_build_integration.path = "$$[QT_INSTALL_LIBS]/cmake/Qt6QuickCompiler"
+# cmake_config_file.input = "$$PWD/Qt6QuickCompilerConfig.cmake.in"
+# cmake_config_file.output = "$$MODULE_BASE_OUTDIR/lib/cmake/Qt6QuickCompiler/Qt6QuickCompilerConfig.cmake"
 
 ## Scopes:
 #####################################################################
