Add cmake directory dependency for .rcc files process by qmlcachegen
This is necessary to trigger a re-configuration if any of those changes.

Fixes: QTBUG-85190
Change-Id: I9a9987533976664d5c382663c52f13a2933a167b
Reviewed-by: Evgeniy Dushistov <dushistov@mail.ru>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/tools/qmlcachegen/Qt5QuickCompilerConfig.cmake.in
+++ b/tools/qmlcachegen/Qt5QuickCompilerConfig.cmake.in
@@ -49,6 +49,7 @@ but not all the files it references.
         set(new_resource_file ${CMAKE_CURRENT_BINARY_DIR}/${resource_base}_qmlcache.qrc)
 
         get_filename_component(input_resource ${_resource} ABSOLUTE)
+        set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${input_resource}")
 
         execute_process(COMMAND ${compiler_path} --filter-resource-file ${input_resource} -o ${new_resource_file} OUTPUT_VARIABLE remaining_files)
         list(APPEND filtered_rcc_files ${new_resource_file})
