CMake: Regenerate projects
We need the qt_add_tool changes to successfully configure qemu builds.
The rest of the changes are just to be in sync with the .pro files.

Change-Id: I7bcc08ac58f57a5761aedef09761428c55235289
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>

--- a/tools/qml/CMakeLists.txt
+++ b/tools/qml/CMakeLists.txt
@@ -4,7 +4,8 @@
 ## qml Tool:
 #####################################################################
 
-qt_add_tool(qml
+qt_get_tool_target_name(target_name qml)
+qt_add_tool(${target_name}
     TARGET_DESCRIPTION "QML Runtime"
     TOOLS_TARGET Qml # special case
     SOURCES
@@ -40,7 +41,7 @@ set(qml_resource_files
     "resources/qml-64.png"
 )
 
-qt_add_resource(qml "qml"
+qt_add_resource(${target_name} "qml"
     PREFIX
         "/qt-project.org/QmlRuntime"
     FILES
@@ -57,12 +58,12 @@ qt_add_resource(qml "qml"
 ## Scopes:
 #####################################################################
 
-qt_extend_target(qml CONDITION TARGET Qt::Gui
+qt_extend_target(${target_name} CONDITION TARGET Qt::Gui
     PUBLIC_LIBRARIES
         Qt::Gui
 )
 
-qt_extend_target(qml CONDITION TARGET Qt::Widgets
+qt_extend_target(${target_name} CONDITION TARGET Qt::Widgets
     PUBLIC_LIBRARIES
         Qt::Widgets
 )
@@ -75,14 +76,14 @@ qt_extend_target(qml CONDITION TARGET Qt::Widgets
 # OTHER_FILES = "resources/Info.plist"
 # QMAKE_INFO_PLIST = "resources/Info.plist"
 
-qt_extend_target(qml CONDITION QT_FEATURE_qml_debug
+qt_extend_target(${target_name} CONDITION QT_FEATURE_qml_debug
     DEFINES
         QT_QML_DEBUG_NO_WARNING
 )
 
-set_target_properties(qml PROPERTIES
+set_target_properties(${target_name} PROPERTIES
     QT_QML_MODULE_VERSION 1.0
     QT_QML_MODULE_URI QmlRuntime.Config
 )
-qt6_qml_type_registration(qml)
 
+qt6_qml_type_registration(${target_name})
