--- a/tools/qmlplugindump/CMakeLists.txt
+++ b/tools/qmlplugindump/CMakeLists.txt
@@ -4,7 +4,8 @@
 ## qmlplugindump Tool:
 #####################################################################
 
-qt_add_tool(qmlplugindump
+qt_get_tool_target_name(target_name qmlplugindump)
+qt_add_tool(${target_name}
     TARGET_DESCRIPTION "QML Plugin Metadata Dumper"
     TOOLS_TARGET Qml # special case
     SOURCES
@@ -28,12 +29,12 @@ qt_add_tool(qmlplugindump
 ## Scopes:
 #####################################################################
 
-qt_extend_target(qmlplugindump CONDITION TARGET Qt::Widgets
+qt_extend_target(${target_name} CONDITION TARGET Qt::Widgets
     PUBLIC_LIBRARIES
         Qt::Widgets
 )
 
-qt_extend_target(qmlplugindump CONDITION MACOS
+qt_extend_target(${target_name} CONDITION MACOS
     LINK_OPTIONS
         "-Wl,-sectcreate,__TEXT,__info_plist,${CMAKE_CURRENT_SOURCE_DIR}/Info.plist" # special case
 )
