--- a/src/qmltyperegistrar/CMakeLists.txt
+++ b/src/qmltyperegistrar/CMakeLists.txt
@@ -4,7 +4,8 @@
 ## qmltyperegistrar Tool:
 #####################################################################
 
-qt_add_tool(qmltyperegistrar
+qt_get_tool_target_name(target_name qmltyperegistrar)
+qt_add_tool(${target_name}
     TARGET_DESCRIPTION "QML Types Registrar"
     TOOLS_TARGET Qml # special case
     SOURCES
