--- a/tests/auto/qml/ecmascripttests/qjstest/CMakeLists.txt
+++ b/tests/auto/qml/ecmascripttests/qjstest/CMakeLists.txt
@@ -4,7 +4,8 @@
 ## qjstest Tool:
 #####################################################################
 
-qt_add_tool(qjstest
+qt_get_tool_target_name(target_name qjstest)
+qt_add_tool(${target_name}
     TARGET_DESCRIPTION "Javascript test runner"
     SOURCES
         main.cpp
