--- a/tools/qmlpreview/CMakeLists.txt
+++ b/tools/qmlpreview/CMakeLists.txt
@@ -4,7 +4,8 @@
 ## qmlpreview Tool:
 #####################################################################
 
-qt_add_tool(qmlpreview
+qt_get_tool_target_name(target_name qmlpreview)
+qt_add_tool(${target_name}
     TARGET_DESCRIPTION "QML Preview"
     TOOLS_TARGET Qml # special case
     SOURCES
