Material: fix binding loops when binding between attached properties
The paletteChanged signal was used as the change signal for a lot of
properties. The problem with this was this binding, for example:

Material.foreground: Material.toolTextColor

results in foreground being set, which emits paletteChanged.
toolTextColor has paletteChanged as its change signal, so that is
triggered and then the foreground binding is re-evaluated in the middle
of already being evaluated.

I haven't found a way to fix this for toolTextColor yet, so we
temporarily skip emission of toolTextColorChanged when foreground
changes. This means that some text will be the wrong color when
foreground is changed after startup.

For other properties, using more specific change handlers is enough
to solve any binding loops.

Task-number: QTBUG-85699
Pick-to: 5.15
Change-Id: Ied52d4c38914765ed5c75e234954f4baabaaa9af
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/tests/auto/qquickmaterialstyle/CMakeLists.txt
+++ b/tests/auto/qquickmaterialstyle/CMakeLists.txt
@@ -17,6 +17,7 @@ qt_add_test(tst_qquickmaterialstyle
         tst_qquickmaterialstyle.cpp
     PUBLIC_LIBRARIES
         Qt::Gui
+        Qt::Qml
     TESTDATA ${test_data}
 )
 
